my-apps/privacy/searxng/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng
  namespace: searxng
  labels:
    external-dns: "true"  # Enable external-DNS for this route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "search.tuxgrid.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: searxng
          port: 8080
          weight: 1
